--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -17,7 +17,7 @@
         height: 480px;
     }
 
-    .cartao .imagem-pokemons {
+    .cartao .imagem-pokemon {
         max-height: 230px;
     }
 
